# Section-LIO

./: .gitignore  CMakeLists.txt  ReadMe.md  package.xml
config/: avia.yaml  m2dgr.yaml
include/libs/ikd-Tree/: ikd_Tree.cpp  ikd_Tree.h
include/slam_craft/: defines.h
include/slam_craft/math/: S03.hpp  geometry.hpp
include/slam_craft/modules/: sc_module_base.h
include/slam_craft/modules/eskf/: eskf.hpp
include/slam_craft/modules/lio/: lio_types.hpp  lio_zh_model.hpp  sectional_lio.hpp  undistortion.hpp
include/slam_craft/modules/map_manager/: rect_map_manager.hpp
include/slam_craft/modules/section_process/: section_process.hpp
include/slam_craft/types/: PointCloud.h  base_type.h  imu.h  time_stamp.h
include/slam_craft/utils/: tic_toc.hpp
include/wrapper/ros_noetic/: common_lidar_process_interface.h  lidar_process.h  sectional_lio_wrapper.hpp
include/wrapper/ros_noetic/velodyne/: velodyne_process.hpp
launch/: avia.launch  m2dgr.launch
rviz/: lio.rviz
src/: slio_node.cpp
